fix: header Layout zu Grid - not responsive

--- a/style.css
+++ b/style.css
@@ -22,25 +22,26 @@ span {
 button:hover {
   cursor: pointer;
 }
-/*header erste stufe flex row*/
+/*header erste stufe grid*/
 header {
-  display: flex;
-  height: 45vh;
-}
-/*Header zweite stufe ProfilImg als grid */
-header .profilImg {
-  width: 25%;
   display: grid;
-  align-items: center;
-  grid-template: 2fr 1fr / 1fr 1fr;
+  grid-template: 2.5fr 1fr / 1fr 2.5fr;
   grid-template-areas:
-    "logo logo"
-    "hist1 hist2";
+    "logo profil"
+    "story story";
+  height: 35vh;
+  aspect-ratio: 1/4;
+}
+/*Header zweite stufe ProfilImg als flex */
+header .profilImg {
+  grid-area: logo;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 15px;
 }
 /*hader dritte stufe ProfilImg mit gradient ring*/
-header .profilImg > div:nth-of-type(1) {
-  grid-area: logo;
+header .profilImg > div {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,48 +52,53 @@ header .profilImg > div:nth-of-type(1) {
   overflow: hidden;
   background: linear-gradient(45deg, #e1b03c, #c22f4c, #a523a3);
 }
-header .profilImg > div:nth-of-type(1) div {
+header .profilImg > div div {
   width: 95%;
   overflow: hidden;
   border-radius: 50%;
   border: 5px solid #000000;
   aspect-ratio: 1/1;
 }
-/*header dritte stufe Hist1&2 allgemein als flex column */
-header .profilImg div:nth-of-type(n + 2):nth-of-type(-n + 3) {
+/*ProfilIMG fertig*/
+
+/*header zweite stufe story als flex row */
+header .story {
+  grid-area: story;
   display: flex;
   align-items: center;
-  height: 100%;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: start;
+  overflow: hidden;
 }
-header .profilImg div:nth-of-type(n + 2):nth-of-type(-n + 3):hover {
+header .story div {
+  height: 100%;
+  aspect-ratio: 1/1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+header .story div:hover {
   cursor: pointer;
 }
-/*header dritte stufe Hist1&2 zuordnung Grid area*/
-header .profilImg div:nth-of-type(2) {
-  grid-area: hist1;
-}
-header .profilImg div:nth-of-type(3) {
-  grid-area: hist2;
-}
-/*Hist1&2 Img und H3 spezifisch*/
-header .profilImg div:nth-of-type(n + 2):nth-of-type(-n + 3) img {
-  width: 80%;
+/*story Img und H3 spezifisch*/
+header .story div img {
+  width: 70%;
   aspect-ratio: 1/1;
   border-radius: 50%;
 }
-header .profilImg div:nth-of-type(n + 2):nth-of-type(-n + 3) h3 {
+header .story div h3 {
   font-size: 0.8rem;
 }
-/*ProfilIMG fertig*/
+/*story fertig*/
 
 /*header zweite stufe profilName als flex column*/
 header .profilName {
-  width: 75%;
+  grid-area: profil;
   display: flex;
   flex-direction: column;
   padding: 15px;
+  overflow: hidden;
 }
 /*header dritte stufe erster Div Name, Buttons und Dropdown als flex row*/
 header .profilName > div:nth-of-type(1) {
@@ -183,7 +189,8 @@ header .profilName > div:nth-of-type(3) > a:nth-of-type(2) {
 }
 /*Nav flex row*/
 nav {
-  display: flex;
+  /*display: flex;*/
+  display: none;
   justify-content: center;
   height: 7vh;
   border-top: 1px solid rgba(161, 161, 161, 0.26);
@@ -212,7 +219,8 @@ nav ul li a:hover {
 }
 /*main als grid auto*/
 main {
-  display: grid;
+  /*display: grid;*/
+  display: none;
 
   gap: 5px;
   grid-template-columns: repeat(3, 1fr);
